// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should implement "renderValue" method when state.checked is true 1`] = `
<div
  className="test-value"
>
  <img
    alt=""
    className="test-value-icon"
    src="test-file-stub"
  />
</div>
`;

exports[`Should render Checkbox component with "checked" property 1`] = `
<div
  aria-checked={true}
  className="checkbox checkbox--checked"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  >
    <img
      alt=""
      className="checkbox__value-icon"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`Should render Checkbox component with "className" property 1`] = `
<div
  aria-checked={false}
  className="checkbox test-class"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  />
</div>
`;

exports[`Should render Checkbox component with "disabled" property 1`] = `
<div
  aria-checked={false}
  aria-disabled={true}
  className="checkbox checkbox--disabled"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  />
</div>
`;

exports[`Should render Checkbox component with "validate" property 1`] = `
<div
  aria-checked={false}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  />
</div>
`;

exports[`Should render Checkbox component with default properties 1`] = `
<div
  aria-checked={true}
  aria-disabled={true}
  className="checkbox test-class checkbox--checked checkbox--disabled"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  >
    <img
      alt=""
      className="checkbox__value-icon"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`Should render Checkbox component with required properties 1`] = `
<div
  aria-checked={false}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex="0"
>
  <div
    className="checkbox__value"
  />
</div>
`;
